# stwo-wasm-demo

./: Cargo.toml  README.md  index.html  rust-toolchain.toml
.github/workflows/: gh-pages.yml
app/: .eslintignore  craco.config.js  package-lock.json  package.json
app/public/: index.html
app/src/: App.js  index.css
app/src/pkg/: README.md  package.json  stwo_wasm_demo.d.ts  stwo_wasm_demo.js  stwo_wasm_demo_bg.wasm
pkg/: README.md  package.json  stwo_wasm_demo.d.ts  stwo_wasm_demo.js  stwo_wasm_demo_bg.wasm.d.ts
src/: lib.rs
