[package]
name = "stwo-wasm-demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
stwo-prover = { git = "https://github.com/starkware-libs/stwo.git" }
wasm-bindgen = "0.2.84"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[features]
default = ["nightly_features"]
nightly_features = []

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
